--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
     "express-winston": "^4.1.0",
     "helmet": "^4.6.0",
     "nodemon": "^2.0.7",
+    "shortid": "^2.2.16",
     "winston": "^3.3.3"
   },
   "devDependencies": {
     "@types/cors": "^2.8.10",
     "@types/debug": "^4.1.5",
     "@types/express": "^4.17.12",
+    "@types/shortid": "0.0.29",
     "source-map-support": "^0.5.19",
     "tslint": "^6.1.3",
     "typescript": "^4.3.2"
