--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express": "^4.17.1",
     "express-winston": "^4.1.0",
     "helmet": "^4.6.0",
+    "mongoose": "^5.12.13",
     "nodemon": "^2.0.7",
     "shortid": "^2.2.16",
     "winston": "^3.3.3"
