--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Mahmoud Alaskalany",
   "license": "ISC",
   "dependencies": {
+    "bcrypt-nodejs": "0.0.3",
     "cors": "^2.8.5",
     "debug": "^4.3.1",
     "dotenv": "^10.0.0",
@@ -17,13 +18,20 @@
     "helmet": "^4.6.0",
     "mongoose": "^5.12.13",
     "nodemon": "^2.0.7",
+    "passport": "^0.4.1",
+    "passport-jwt": "^4.0.0",
+    "passport-local": "^1.0.0",
     "shortid": "^2.2.16",
     "winston": "^3.3.3"
   },
   "devDependencies": {
+    "@types/bcrypt-nodejs": "0.0.31",
     "@types/cors": "^2.8.10",
     "@types/debug": "^4.1.5",
     "@types/express": "^4.17.12",
+    "@types/passport": "^1.0.6",
+    "@types/passport-jwt": "^3.0.5",
+    "@types/passport-local": "^1.0.33",
     "@types/shortid": "0.0.29",
     "source-map-support": "^0.5.19",
     "tslint": "^6.1.3",
